Added a simple framework for building on a cli tooling system.

--- a/cli/package.json
+++ b/cli/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "aw": "./src/cli.mjs"
   },
+  "directories": {
+    "src": "./src"
+  },
   "author": {
     "name": "Patrick Ortiz",
     "email": "pogithub+pzychotis@gmail.com",
